--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 image: docker:latest
 
+variables:
+  VERSION: 0.2.0
+
 services:
   - docker:dind
 
@@ -39,5 +42,4 @@ build_amd64:
   tags:
     - docker
   script:
-    - export BUILD_DATE=$(date +%Y-%m-%d)
-    - docker buildx build --platform linux/amd64 -t docker.bemade.org/bemade/odoo-operator:$BUILD_DATE -t docker.bemade.org/bemade/odoo-operator:latest --push .
+    - docker buildx build --platform linux/amd64 -t docker.bemade.org/bemade/odoo-operator:$VERSION -t docker.bemade.org/bemade/odoo-operator:latest --push .
