--- a/examples/odoo-values.yaml
+++ b/examples/odoo-values.yaml
@@ -1,4 +1,4 @@
-image: odoo:18.0
+image: docker.bemade.org/bemade/odoo18.0e
 imagePullSecret: docker.bemade.org
 adminPassword: abc123
 replicas: 1
@@ -21,3 +21,8 @@ configOptions:
   limit_time_real: "600"
   limit_time_cpu: "600"
   addons_path: "/mnt/extra-addons,/mnt/enterprise-addons"
+gitProject:
+  repository: "https://git.bemade.org/bemade/bemade-site"
+  branch: "18.0"
+  sshSecret: "ssh-key"
+
