mount addons synced from git

--- a/examples/odoo-values.yaml
+++ b/examples/odoo-values.yaml
@@ -22,7 +22,7 @@ configOptions:
   limit_time_cpu: "600"
   addons_path: "/mnt/extra-addons,/mnt/enterprise-addons"
 gitProject:
-  repository: "https://git.bemade.org/bemade/bemade-site"
+  repository: "git@git.bemade.org:bemade/bemade-site"
   branch: "18.0"
   sshSecret: "ssh-key"
 
