--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
     DOCKER_TLS_CERTDIR: ""
     DOCKER_DRIVER: overlay2
     # Pass registry credentials to Docker
-    DOCKER_AUTH_CONFIG: '{"auths":{"${HARBOR_URL}":{"username":"${HARBOR_USERNAME}","password":"${HARBOR_PASSWORD}"}}}'
+    DOCKER_AUTH_CONFIG: '{"auths":{"${CI_REGISTRY}":{"username":"${CI_REGISTRY_USER}","password":"${CI_REGISTRY_PASSWORD}"}}}'
   script:
     - |
       # Install git and ssh
@@ -48,8 +48,8 @@ build:
       ssh-add ~/.ssh/github_key
 
       # Login to Docker registry
-      echo "${HARBOR_PASSWORD}" | docker login ${HARBOR_URL} -u "${HARBOR_USERNAME}" --password-stdin
+      echo "${CI_REGISTRY_PASSWORD}" | docker login ${CI_REGISTRY} -u "${CI_REGISTRY_USER}" --password-stdin
 
-      docker build -t docker.bemade.org/bemade/odoo-operator:$VERSION -t docker.bemade.org/bemade/odoo-operator:latest .
-      docker push docker.bemade.org/bemade/odoo-operator:latest
-      docker push docker.bemade.org/bemade/odoo-operator:$VERSION
+      docker build -t $CI_REGISTRY_IMAGE:$VERSION -t $CI_REGISTRY_IMAGE:latest .
+      docker push $CI_REGISTRY_IMAGE:latest
+      docker push $CI_REGISTRY_IMAGE:$VERSION
