--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 variables:
   VERSION: 0.6.0
-  IMAGE_NAME: "$CI_REGISTRY_IMAGE"
 
 stages:
   - build
@@ -51,6 +50,6 @@ build:
       # Login to Docker registry
       echo "${CI_REGISTRY_PASSWORD}" | docker login ${CI_REGISTRY} -u "${CI_REGISTRY_USER}" --password-stdin
 
-      docker build -t $IMAGE_NAME:$VERSION -t $IMAGE_NAME:latest .
+      docker build -t $CI_REGISTRY_IMAGE:$VERSION -t $CI_REGISTRY_IMAGE:latest .
       docker push $CI_REGISTRY_IMAGE:latest
       docker push $CI_REGISTRY_IMAGE:$VERSION
