--- a/operator/config/rbac/role.yaml
+++ b/operator/config/rbac/role.yaml
@@ -7,16 +7,36 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - configmaps
   - secrets
+  - services
   verbs:
+  - create
   - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - persistentvolumeclaims
+  verbs:
+  - create
+  - get
+  - list
+  - watch
 - apiGroups:
   - apps
   resources:
   - deployments
   verbs:
+  - create
   - get
+  - list
   - patch
+  - update
+  - watch
 - apiGroups:
   - batch
   resources:
@@ -30,8 +50,11 @@ rules:
 - apiGroups:
   - bemade.org
   resources:
+  - odoobackupjobs
   - odooinitjobs
   - odooinstances
+  - odoorestorejobs
+  - odooupgradejobs
   verbs:
   - create
   - delete
@@ -43,16 +66,33 @@ rules:
 - apiGroups:
   - bemade.org
   resources:
+  - odoobackupjobs/finalizers
   - odooinitjobs/finalizers
   - odooinstances/finalizers
+  - odoorestorejobs/finalizers
+  - odooupgradejobs/finalizers
   verbs:
   - update
 - apiGroups:
   - bemade.org
   resources:
+  - odoobackupjobs/status
   - odooinitjobs/status
   - odooinstances/status
+  - odoorestorejobs/status
+  - odooupgradejobs/status
   verbs:
   - get
   - patch
   - update
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs:
+  - create
+  - get
+  - list
+  - patch
+  - update
+  - watch
