Add ScaleRequested/ScaleCompleted events and fix upgrade hook
- Emit ScaleRequested when spec.replicas changes from the last observed
  value (tracked in status.targetReplicas); first reconcile sets silently
- Emit ScaleCompleted when readyReplicas reaches spec.replicas after
  having been different
- Rename event recorder from odooinstance-controller to odoo-operator
- Skip v1→v1alpha1 storage migration in post-upgrade hook when v1 is
  already absent from CRD storedVersions, preventing webhook timeouts
  during upgrades while the operator pod is restarting

--- a/charts/odoo-operator/templates/hooks/post-install-migrate.yaml
+++ b/charts/odoo-operator/templates/hooks/post-install-migrate.yaml
@@ -71,12 +71,18 @@ spec:
                 fi
               fi
               
-              # Migrate all bemade.org CRD objects from v1 to v1alpha1 storage by
-              # patching via the explicit v1alpha1 API endpoint.  Kubernetes stores
-              # the write in the current storage version (v1alpha1) regardless of
-              # what version the object was previously stored as.
+              # Migrate all bemade.org CRD objects from v1 to v1alpha1 storage.
+              # This is a one-time operation: once v1 is gone from storedVersions
+              # the function skips patching (which would otherwise hit the webhook
+              # while the operator pod is still starting up during upgrades).
               migrate_resource() {
                 local plural="$1"
+                STORED=$(kubectl get crd "${plural}.bemade.org" \
+                  -o jsonpath='{.status.storedVersions}' 2>/dev/null || echo "[]")
+                if ! echo "$STORED" | grep -q '"v1"'; then
+                  echo "$plural: v1 already removed from storedVersions, skipping migration"
+                  return 0
+                fi
                 echo "Migrating $plural from v1 to v1alpha1 storage..."
                 kubectl get "${plural}.v1alpha1.bemade.org" --all-namespaces -o json 2>/dev/null | \
                   jq -r '.items[] | "\(.metadata.namespace) \(.metadata.name)"' | \
