--- a/operator/config/crd/bases/bemade.org_odoorestorejobs.yaml
+++ b/operator/config/crd/bases/bemade.org_odoorestorejobs.yaml
@@ -90,31 +90,10 @@ spec:
                     description: odoo configures a live Odoo instance source. Required
                       when type is "odoo".
                     properties:
-                      masterPasswordSecretRef:
-                        description: masterPasswordSecretRef references a Secret whose
-                          key contains the Odoo master password.
-                        properties:
-                          key:
-                            description: The key of the secret to select from.  Must
-                              be a valid secret key.
-                            type: string
-                          name:
-                            default: ""
-                            description: |-
-                              Name of the referent.
-                              This field is effectively required, but due to backwards compatibility is
-                              allowed to be empty. Instances of this type with an empty value here are
-                              almost certainly wrong.
-                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                            type: string
-                          optional:
-                            description: Specify whether the Secret or its key must
-                              be defined
-                            type: boolean
-                        required:
-                        - key
-                        type: object
-                        x-kubernetes-map-type: atomic
+                      masterPassword:
+                        description: masterPassword is the Odoo master (admin) password
+                          of the source instance.
+                        type: string
                       sourceDatabase:
                         description: sourceDatabase is the name of the database to
                           download from the source.
